Понаводил порядки на главной странице - в поле пароля теперь меняется цвет через конвертер - показать/скрыть пароль теберь через нажатие на картинку, и конвертер Ну и всякие мелочевки

--- a/My_sporting_achievments/My_sporting_achievments.Android/My_sporting_achievments.Android.csproj
+++ b/My_sporting_achievments/My_sporting_achievments.Android/My_sporting_achievments.Android.csproj
@@ -85,7 +85,6 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\My_sporting_achievments\My_sporting_achievments.csproj">
       <Project>{6A553398-D10A-4DA0-AFB2-0053AB06609E}</Project>
@@ -94,6 +93,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\rocky2mini.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\closeEye.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\openEye.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
